--- a/CardboardQualityControl/App.xaml
+++ b/CardboardQualityControl/App.xaml
@@ -2,9 +2,17 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" 
              xmlns:local="clr-namespace:CardboardQualityControl"
+             xmlns:converters="clr-namespace:CardboardQualityControl.Converters"
              Startup="Application_Startup">
     <Application.Resources>
         <BooleanToVisibilityConverter x:Key="BooleanToVisibilityConverter"/>
-        <local:BooleanToNotConverter x:Key="BooleanToNotConverter"/>
+        <converters:DefectToBrushConverter x:Key="DefectToBrushConverter"/>
+        <converters:VideoSourceTypeToStringConverter x:Key="VideoSourceTypeConverter"/>
+        <converters:DefectTypeToStringConverter x:Key="DefectTypeConverter"/>
+        <converters:NullToVisibilityConverter x:Key="NullToVisibilityConverter"/>
+        <converters:BooleanToColorConverter x:Key="BooleanToColorConverter"/>
+        <converters:DefectToStatusColorConverter x:Key="DefectToStatusColorConverter"/>
+        <converters:BooleanToNotConverter x:Key="BooleanToNotConverter"/>
+        <converters:BooleanToStringConverter x:Key="BooleanToStringConverter"/>
     </Application.Resources>
 </Application>
