--- a/CardboardQualityControl/App.xaml
+++ b/CardboardQualityControl/App.xaml
@@ -1,19 +1,28 @@
 ﻿<Application x:Class="CardboardQualityControl.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" 
+             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:CardboardQualityControl"
              xmlns:converters="clr-namespace:CardboardQualityControl.Converters"
-             Startup="Application_Startup">
+             Startup="Application_Startup"
+             Exit="Application_Exit">
     <Application.Resources>
-        <BooleanToVisibilityConverter x:Key="BooleanToVisibilityConverter"/>
-        <converters:DefectToBrushConverter x:Key="DefectToBrushConverter"/>
-        <converters:VideoSourceTypeToStringConverter x:Key="VideoSourceTypeConverter"/>
-        <converters:DefectTypeToStringConverter x:Key="DefectTypeConverter"/>
-        <converters:NullToVisibilityConverter x:Key="NullToVisibilityConverter"/>
-        <converters:BooleanToColorConverter x:Key="BooleanToColorConverter"/>
-        <converters:DefectToStatusColorConverter x:Key="DefectToStatusColorConverter"/>
-        <converters:BooleanToNotConverter x:Key="BooleanToNotConverter"/>
-        <converters:BooleanToStringConverter x:Key="BooleanToStringConverter"/>
-        <converters:FileVideoVisibilityConverter x:Key="FileVideoVisibilityConverter"/>
+        <ResourceDictionary>
+            <converters:BooleanToVisibilityConverter x:Key="BooleanToVisibilityConverter"/>
+            <converters:InverseBooleanConverter x:Key="InverseBooleanConverter"/>
+            <converters:BooleanToColorConverter x:Key="BooleanToColorConverter"/>
+            <converters:DefectToBrushConverter x:Key="DefectToBrushConverter"/>
+            <converters:VideoSourceTypeToStringConverter x:Key="VideoSourceTypeConverter"/>
+            <converters:DefectTypeToStringConverter x:Key="DefectTypeConverter"/>
+            <converters:NullToVisibilityConverter x:Key="NullToVisibilityConverter"/>
+            <converters:DefectToStatusColorConverter x:Key="DefectToStatusColorConverter"/>
+            <converters:BooleanToNotConverter x:Key="BooleanToNotConverter"/>
+            <converters:BooleanToStringConverter x:Key="BooleanToStringConverter"/>
+            <converters:FileVideoVisibilityConverter x:Key="FileVideoVisibilityConverter"/>
+            <converters:BooleanToRedGreenConverter x:Key="BooleanToRedGreenConverter"/>
+            <converters:GreaterThanZeroConverter x:Key="GreaterThanZeroConverter"/>
+            <converters:SubtractFramesConverter x:Key="SubtractFramesConverter"/>
+            <converters:AddFramesConverter x:Key="AddFramesConverter"/>
+            <converters:RectConverter x:Key="RectConverter"/>
+        </ResourceDictionary>
     </Application.Resources>
 </Application>
